<resources>
    <string name="app_name">ALMORTAH</string>
    <string name="title_activity_chalet_list">Rest-houses and chalets</string>
    <string name="list">View By List</string>
    <string name="map">View By Maps</string>
    <string name="date">Date</string>
    <string name="delete_rate">Cancel/Rate</string>
    <string name="rate">Rate</string>
    <string name="cancel">Cancel</string>
    <string name="price">Price</string>
    <string name="prices">Prices</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="downChalet">Downloading Chalets</string>
    <string name="wait">Please wait</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="userType">Who are you?</string>
    <string name="afterSignup">Kindly login with your email/password</string>
    <string name="bookVistor">Kindly login to reserve this chalet</string>
    <string name="erVerifyPassword">Password not match</string>
    <string name="erEmptyField">All fields are required</string>
    <string name="erAuth">Email or Password did not meet the requirements</string>
    <string name="erVerifyEmail">Can not verify your email</string>
    <string name="reasons">Reasons</string>
    <string-array name="reasonsReject">
        <item>This day is not available</item>
        <item>Low customer rating </item>
    </string-array>
    <string name="owner">Owner</string>
    <string name="chaletOwner">Rest-house/Chalet owner</string>
    <string name="chaletName">Chalet Name</string>
    <string name="promotion">Promotion</string>
    <string name="newChalet">Add a new chalet</string>
    <string name="mapView">Show By Maps</string>
    <string name="doneUpload">Upload successfully!</string>
    <string name="promot">ALMORTAH team will keep the promoted rest-house and chalet always in
        the top of the home page and we will do our best to keep your rest-house/chalet to be the best recommended place.
    </string>
    <string name="offer">Offer</string>
    <string name="per">Period</string>
    <string name="month">1 Month</string>
    <string name="week">1 Week</string>
    <string name="day">1 Day</string>
    <string name="customer">Customer</string>
    <string name="username">Username</string>
    <string name="fullname">Full name</string>
    <string name="phone">Phone number. ex:512345678</string>
    <string name="email">Valid Email</string>
    <string name="password">Password (More than 6 characteristics)</string>
    <string name="verifyPassword">Verify Password</string>
    <string name="searchChalet">Search for rest-house/chalet</string>
    <string name="chaletRate">Rate this chalet</string>
    <string name="freeDate">This rest-house/chalet is free at </string>
    <string name="checkin">Check-in time</string>
    <string name="checkout">Check-out time will be at 2:00 after midnight</string>
    <string name="cash">Pay cash</string>
    <string name="visa">Pay by credit card</string>
    <string name="confirm">Confirm reservation</string>
    <string name="history">My reservation history</string>
    <string name="checkAv">Check the availability</string>
    <string name="checkAvText">Choose the date</string>
    <string name="busyDay">Sorry this day is booked!</string>
    <string name="freeDay">This day is available</string>
    <string name="chaletNameHistory">Rest-house/Chalet</string>
    <string name="bestChalet">Recommended Rest-house/Chalet</string>
    <string name="normalPrice">Normal days</string>
    <string name="weekendPrice">Weekend</string>
    <string name="eidPrice">Eid</string>
    <string name="overview">
        This project aims to improve users experience when they are aiming to reserve
        a rest-house or a chalet in Saudi Arabia. It allows customers to search for properties and
        reserve them efficiently. Moreover, it permits the property’s owners to manage the reservation process,
        by using their smartphones.
</string>
    <string-array name="RiyadhEast">
        <item>Alfalah</item>
        <item>Alruwda</item>
        <item>Alnasim</item>
        <item>Alnazim</item>
        <item>Alsuliyu</item>
        <item>Alquds</item>
        <item>Alhamra'</item>
        <item>Gharnata</item>
        <item>Alnahda</item>
        <item>Alkhalij</item>
        <item>Almughrizat</item>
        <item>Aljazira</item>
        <item>Alruwwad</item>
        <item>Alrabuwh</item>
        <item>Iishbilia</item>
        <item>Alyarmuk </item>
        <item>Qartabuh </item>
        <item>Alrayan </item>
        <item>Alshuhada </item>
    </string-array>
    <string-array name="RiyadhWest">
        <item>Aldiriya</item>
        <item>albadiea</item>
        <item>Irqah</item>
        <item>Laban</item>
        <item>Asswidi</item>
        <item>Shubra</item>
        <item>Aleryja</item>
        <item> King Saud university</item>
    </string-array>
    <string-array name="Riyadh">
        <item>All Areas</item>
        <item>North of Riyadh</item>
        <item>East of Riyadh</item>
        <item>Center of Riyadh</item>
        <item>West of Riyadh</item>
        <item>South of Riyadh</item>
    </string-array>
    <string name="complaints">Complaints</string>
    <string-array name="android_dropdown_arrays">
        <item>Customer</item>
        <item>Owner</item>
    </string-array>
    <string name="logout">Logout</string>
    <string name="guest">CONTINUE AS GUEST</string>
    <string name="signAlmortah">Rest-houses and Chalets now closer</string>
    <string name="google_maps_key">AIzaSyC3kyuKrNC7kLK6eEzoK94JmxjrHl1tRDw</string>
    <string name="title_activity_maps">Map</string>
    <string name="reservation">Reserve</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="home">Home page</string>
    <string name="badPhone">Phone number is not correct</string>
    <string name="Price">Price</string>
    <string name="badPas">Password must be more than 6 characteristics</string>
    <string name="viewStat">Statistics</string>
    <string name="manage">Manage</string>
    <string name="erEmailPass">Wrong email or password</string>
    <string name="feedback">Feedback</string>
    <string name="about">About us</string>
    <string name="notify">Notifications</string>
    <string name="allStat">Statistics</string>
    <string name="rateCustomer">Rate a customer</string>
    <string name="myChalets">My Rest-houses/Chalets</string>
    <string name="defLocation">Defining location....</string>
    <string name="payment">Payment</string>
    <string name="back">Back</string>
    <string name="oneTimeOnly">You just booked this chalet/rest-house</string>
    <string name="myInfo">My profile</string>
    <string name="emailAddress">My email</string>
    <string name="myPhone">My phone</string>
    <string name="delete">Delete</string>
    <string name="sure">Are you sure you wanted to make this decision?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="upload">Upload images</string>
    <string name="description">Chalet description</string>
    <string name="location">Location</string>
    <string name="brief">Brief</string>
    <string name="idea">Idea</string>
    <string name="ideaName">Dr. Abdulaziz Alsadhan\nKing Saud University\nCollege of Computer and Information
        Sciences\nDept. of Software Engineering</string>
    <string name="team">Team members</string>
    <string name="us">Abdullah Almahri\nZiyad AlKhonin\nAbdullah AlAjrid\nAbdullah AlMalki</string>
    <string name="start">Start</string>
    <string name="startDate">ALMORTAH is a graduation project during the year of 2017 </string>
    <string name="donePromot">Your rest-house/chalet has been promoted!</string>
    <string name="viewUsers">Customers and Owners</string>
    <string name="approve">Approve owners</string>
    <string name="ban">Blacklist</string>
    <string name="complain">Complain</string>
    <string name="customers">Customers</string>
    <string name="owners">Owners</string>
    <string name="managePromotion">Manage Promotions</string>
    <string name="restsChalets">Rest-houses/Chalets</string>
    <string name="theEmail">Email</string>
    <string name="phoneNum">Phone number</string>
    <string name="search">Search</string>
    <string name="block">Ban</string>
    <string name="info">User details</string>
    <string name="ok">OK</string>
    <string name="type">Type</string>
    <string name="nbChalets">Number of chalets</string>
    <string name="detail">Details</string>
    <string name="blockPage">You have been blocked</string>
    <string name="blockReson">Block reasons</string>
    <string name="reson">Why you want to ban this user?</string>
    <string name="contact">Contact to admin</string>
    <string name="searchByName">Search for specific rest-house/chalet</string>
    <string name="filter">Filter your result</string>
    <string name="maxPrice">Max Price</string>
    <string name="minPrice">Min Price</string>
    <string name="yourBooked">You have been booked this day</string>
    <string name="bookingID">Reservation ID </string>
    <string name="outTime">Check-out time</string>
    <string name="riyal">S.R</string>
    <string name="modify">Edit profile</string>
    <string name="updateProfile">Your profile has been updated</string>
    <string name="current">My current reservation</string>
    <string name="rateChalet">Rate a rest-house/chalet</string>
    <string name="needRate">Rest-houses/Chalets need your rating!</string>
    <string name="commet">Comment</string>
    <string name="promoted">This rest-house/chalet was promoted</string>
    <string name="dirc">Direction</string>
    <string name="cleanRate">Cleaning rate</string>
    <string name="reciptRate">Reception rate</string>
    <string name="priceRate">Price rating</string>
    <string name="commentNm">Comment number</string>
    <string name="needLogin">Kindly login to complain this chalet</string>
    <string name="complainReson">Why you want to complain?</string>
    <string name="doneComplain">Your complaint raised successfully, thanks</string>
    <string name="cancel1">Cancel</string>
    <string name="needApprove">Reservations need your approve!</string>
    <string name="customerRate">Customer rate</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="customerName">Customer Name</string>
    <string name="needCustomerRate">Customers need rating</string>
    <string name="pending">Pending</string>
    <string name="confirmed">Confirmed !</string>
    <string name="rejected">Rejected !</string>
    <string name="filter1">Filter</string>
    <string name="startFrom">Starting from</string>
    <string name="loading">Loading..</string>
    <string name="approvBooking">Accept/Reject reservations</string>
    <string name="cardNum">Card Number</string>
    <string name="cardName">Name of Card Holder</string>
    <string name="loadVisa">Load saved credit card</string>
    <string name="saveVisa">Save this credit card for future payment</string>
    <string name="confirmPay">Pay</string>
    <string name="month1">Month</string>
    <string name="year">Year</string>
    <string name="noLoad">There is no saved credit card</string>
    <string name="yourPhone">Your phone number is</string>
    <string name="phoneValdition">You will receive verification code on</string>
    <string name="sms">SMS Code</string>
    <string name="valdition">Validate</string>
    <string name="invalidCode">Invalid code</string>
    <string name="complatePayment">Kindly complete the payment with your credit card</string>
</resources>