<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:android="http://schemas.android.com/apk/res/android"
tools:context=".MyChalets">

    <item
        android:id="@+id/myChalet"
        android:title="@string/myChalets"
        android:icon="@drawable/ic_mychalet"/>

<item
    android:id="@+id/newChalet"
    android:title="@string/newChalet"
    android:icon="@drawable/ic_addchalet"/>
    <item
        android:id="@+id/stat"
        android:title="@string/allStat"
        android:icon="@drawable/ic_insert_chart_black_24dp"/>

    <item
        android:id="@+id/approvBooking"
        android:icon="@drawable/ic_curent"
        android:title="@string/approvBooking"/>

    <item
        android:id="@+id/rateCustomer"
        android:icon="@drawable/ic_rate_review_black_24dp"
        android:title="@string/rateCustomer"/>
    <!--<item-->
        <!--android:id="@+id/feed"-->
        <!--android:icon="@drawable/ic_feedback_black_24dp"-->
        <!--android:title="@string/feedback" />-->

    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_copyright_black_24dp"
        android:title="@string/about"/>

    <item
        android:id="@+id/myInfo"
        android:icon="@drawable/ic_myinfo"
        android:title="@string/myInfo" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_directions_run_black_24dp"
        android:title="@string/logout" />
    <item
        android:id="@+id/close"
        android:title="@string/drawer_close"
        android:icon="@drawable/ic_close_black_24dp"/>
</menu>