<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homePage"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp"/>
    <item
        android:id="@+id/searchChaleh"
        android:title="@string/searchChalet"
        android:icon="@drawable/ic_search_black_24dp"/>
    <item
        android:id="@+id/history"
        android:title="@string/history"
        android:icon="@drawable/ic_history_black_24dp"/>
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_directions_run_black_24dp"/>

    <item
        android:id="@+id/close"
        android:title="@string/drawer_close"
        android:icon="@drawable/ic_close_black_24dp"/>

</menu>