<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".ChaletListActivity">

    <item
        android:id="@+id/homePage"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp"/>

    <item
        android:id="@+id/login"
        android:icon="@drawable/ic_vpn_key_black_24dp"
        android:title="@string/login"
        android:showAsAction="withText"
        app:showAsAction="withText"

        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/register"
        android:icon="@drawable/ic_myinfo"
        android:title="@string/register"
        android:showAsAction="withText"
        app:showAsAction="withText"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/searchChaleh"
        android:title="@string/searchChalet"
        android:icon="@drawable/ic_search_black_24dp"/>
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_copyright_black_24dp"
        android:title="@string/about"/>

</menu>