<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="20dp"
    tools:context="com.almortah.almortah.signupOwner"
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/ownerUsername"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/username" />


    <EditText
        android:id="@+id/ownerFullname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/fullname"
        android:textColor="@color/colorWhite" />

    <EditText
        android:id="@+id/ownerPhone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/ownerEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/ownerPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/ownerPassword2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/verifyPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/submitOwner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="left"
        android:backgroundTint="#62BA60"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/colorWhite" />


</LinearLayout>
