<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/design"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="20dp"
    tools:context="com.almortah.almortah.AddChalet"
    android:weightSum="1">

    <EditText
        android:id="@+id/chaletName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/chaletName" />

    <EditText
        android:id="@+id/normalPrice"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/Price"
        android:digits="0,1,2,3,4,5,6,7,8,9"
        android:inputType="number" />

    <Button
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="40dp"
        android:text="Upload image"
        android:id="@+id/upload"/>

    <Button
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="40dp"
        android:text="@string/submit"
        android:id="@+id/submitChalet"/>

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
